# src/main/java/nl/inholland/bank/models/Account.java
@@ -23,19 +23,21 @@ public class Account {
     private String IBAN;
     private AccountType type;
     private boolean isActive;
+    private double absoluteLimit;
 
-    public Account(User user, double balance, CurrencyType currencyType, String IBAN, AccountType type) {
+    public Account(User user, double balance, CurrencyType currencyType, String IBAN, AccountType type, double absoluteLimit) {
         this.user = user;
         this.balance = balance;
         this.currencyType = currencyType;
         this.IBAN = IBAN;
         this.type = type;
         this.isActive = true;
+        this.absoluteLimit = absoluteLimit;
     }
 
     public void setBalance(double balance) {
-        if (balance < 0) {
-            throw new IllegalArgumentException("Balance cannot be negative");
+        if (Double.isNaN(balance)) {
+            throw new IllegalArgumentException("Balance cannot be NaN");
         }
 
         this.balance = balance;
@@ -54,6 +56,10 @@ public class Account {
             throw new IllegalArgumentException("IBAN cannot be null");
         }
 
+        if (!IBANGenerator.isValidIBAN(IBAN)) {
+            throw new IllegalArgumentException("IBAN is not valid");
+        }
+
         this.IBAN = IBAN;
     }
 
@@ -67,5 +73,12 @@ public class Account {
 
     public void setActive(boolean active) {
         this.isActive = active;
+    }
+
+    public void setAbsoluteLimit(double absoluteLimit) {
+        if (absoluteLimit > 0) {
+            throw new IllegalArgumentException("Absolute limit cannot be higher than 0");
+        }
+        this.absoluteLimit = absoluteLimit;
     }
 }
