# swagger/banking.yml
@@ -326,7 +326,6 @@ paths:
         Returns all limits for specific user.<br>
         Employee can see all User limits.<br>
         Client can only see his own limits.<br><br>
-        '**absolute_limit**' refers to minimum money that must always be present on the account.<br><br>
         Users that are employee-only and do not have currents accounts can't access it. In this case, 405 will be returned.
       operationId: getUserLimits
       parameters:
@@ -347,7 +346,6 @@ paths:
               example:
                 transaction_limit: 1000
                 daily_transaction_limit: 5000
-                absolute_limit: 0
                 remaining_daily_transaction_limit: 420.69
         "401":
           $ref: "#/components/responses/Unauthorized"
@@ -368,8 +366,7 @@ paths:
         Updates the user limits.<br>
         Only Employee can edit User limits.<br><br>
         <b>'transaction_limit'</b> refers to maximum amount of money that can be transfered in a single transfer.<br>
-        <b>'daily_transfaction_limit'</b> refers to the maximum amount of money that can be transferred from the user during a single day.<br>
-        <b>'absolute_limit'</b> refers to the minimum amount of money that must always be present on the account.<br><br>
+        <b>'daily_transfaction_limit'</b> refers to the maximum amount of money that can be transferred from the user during a single day.<br><br>
         <i>Note: daily transfer limit does not apply to transfers between users of the same user.</i>
       operationId: updateUserLimits
       parameters:
@@ -389,7 +386,6 @@ paths:
             example:
               transaction_limit: 1000
               daily_transaction_limit: 10000
-              absolute_limit: 0
       responses:
         "200":
           description: User limits have been updated
@@ -400,7 +396,6 @@ paths:
               example:
                 transaction_limit: 1000
                 daily_transaction_limit: 10000
-                absolute_limit: 0
                 remaining_daily_transaction_limit: 5420.69
         "401":
           $ref: "#/components/responses/Unauthorized"
@@ -1039,11 +1034,6 @@ components:
           format: double
           maximum: 1000000
           minimum: 0
-        absolute_limit:
-          type: number
-          format: double
-          maximum: 0
-          minimum: -1000000
     UserLimitsResponse:
       type: object
       properties:
@@ -1055,10 +1045,6 @@ components:
           type: number
           format: double
           minimum: 0
-        absolute_limit:
-          type: number
-          format: double
-          maximum: 0
         remaining_daily_transaction_limit:
           type: number
           format: double
